# music

./: .cproject  .project  Add9Chord.cpp  Add9Chord.h  Chord.cpp  Chord.h  ChordFactory.cpp  Guitar.cpp  Guitar.h  GuitarChord.cpp  GuitarChord.h  GuitarSearchCriteria.h  GuitarString.cpp  GuitarString.h  HtmlPublisher.cpp  HtmlPublisher.h  IPublisher.h  MajorChord.cpp  MajorChord.h  MajorScale.cpp  MajorScale.h  MinorChord.cpp  MinorChord.h  MinorScale.cpp  MinorScale.h  Music.cpp  Note.cpp  Note.h  Publisher.cpp  Publisher.h  README.md  Scale.cpp  Scale.h  StringUtils.hpp  Sus2Chord.cpp  Sus2Chord.h  Sus4Chord.cpp  Sus4Chord.h  TextPublisher.cpp  TextPublisher.h  (+3 more)
